# SimpleShell

./: .gitignore  README.md
SimpleShell/: Cargo.toml  V1.md  v1.md
SimpleShell/src/: cpu.rs  errors.rs  interpreter.rs  kernel.rs  main.rs  pcb.rs  shellmemory.rs
SimpleShell/src/fs/: ata.rs  bitmap.rs  block.rs  cache.rs  directory.rs  file.rs  file_sys.rs  free_map.rs  freemap.rs  fs_errors.rs  inode.rs  inode_dup.rs  mod.rs  partition.rs  util.rs
SimpleShell/src/fs/fserrors/: bitmap_errors.rs  block_errors.rs  cache_errors.rs  controller_errors.rs  dir_errors.rs  file_errors.rs  freemap_errors.rs  inode_errors.rs  mod.rs
a1/: interpreter.c
a2/: Makefile  interpreter.c  interpreter.h  kernel.c  kernel.h  pcb.c  pcb.h  ready_queue.c  ready_queue.h  shell.c  shellmemory.c  shellmemory.h
a3/: Makefile
a3/fs/: fsutil2.c
