[package]
name = "SimpleShell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.17.0", features = ["derive", "extern_crate_alloc", "min_const_generics"] }

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.12.0"
